--- a/Entity Framework/appsettings.json
+++ b/Entity Framework/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "common": "server=localhost;port=5432;Database=common;User id=postgres;Password=Bizgaze@123;"
+  }
+
+
 }
